WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169736
[GLIB] MainThread implementation is not GTK+ specific
https://bugs.webkit.org/show_bug.cgi?id=169736
Summary
[GLIB] MainThread implementation is not GTK+ specific
Carlos Garcia Campos
Reported
2017-03-16 00:49:59 PDT
It's implemented in MainThreadGLib.cpp for glib based ports, so ifdefs in MainThread.cpp should not be PLATFORM(GTK) but USE(GLIB)
Attachments
Patch
(2.81 KB, patch)
2017-03-16 00:51 PDT
,
Carlos Garcia Campos
ysuzuki
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2017-03-16 00:51:46 PDT
Created
attachment 304616
[details]
Patch
Yusuke Suzuki
Comment 2
2017-03-16 01:11:21 PDT
Comment on
attachment 304616
[details]
Patch r=me
Carlos Garcia Campos
Comment 3
2017-03-16 02:57:34 PDT
Committed
r214035
: <
http://trac.webkit.org/changeset/214035
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug