[GLIB] MainThread implementation is not GTK+ specific https://bugs.webkit.org/show_bug.cgi?id=169736

Reviewed by Yusuke Suzuki.

It's implemented in MainThreadGLib.cpp for glib based ports, so ifdefs in MainThread should not be
PLATFORM(GTK) but USE(GLIB).

* wtf/MainThread.cpp:
* wtf/MainThread.h:

Canonical link: https://commits.webkit.org/186707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214035 268f45cc-cd09-0410-ab3c-d52691b4dbfc